Changes in version 0.2.0.9-alpha - 2007-10-??

  o Major bugfixes:
    - Stop publishing a new server descriptor just because we HUP or
      when we find our DirPort to be reachable but won't actually publish
      it. Extra descriptors without any real changes are dropped by the
      authorities, and can screw up our "publish every 18 hours" schedule.

  o Minor features:
    - If we find a cached-routers file that's been sitting around for more
      than 28 days unmodified, then most likely it's a leftover from when we
      upgraded to 0.2.0.8-alpha.  Remove it.  It has no good routers anyway.

  o Minor bugfixes:
    - Correct the implementation of "download votes by digest."  Bugfix on
      0.2.0.8-alpha.

  o Code simplifications and refactoring:
    - Remove support for the old bw_accounting file: we've been storing
      bandwidth accounting information in the state file since 0.1.2.5-alpha.
      This may result in bandwidth accounting errors if you try to upgrade
      from 0.1.1.x or earlier, or if you try to downgrade to 0.1.1.x or
      earlier.


Changes in version 0.2.0.8-alpha - 2007-10-12
  o Major features (router descriptor cache):
    - Store routers in a file called cached-descriptors instead of in
      cached-routers. Initialize cached-descriptors from cached-routers
      if the old format is around. The new format allows us to store
      annotations along with descriptors.
    - Use annotations to record the time we received each descriptor, its
      source, and its purpose.
    - Disable the SETROUTERPURPOSE controller command: it is now
      obsolete.
    - Controllers should now specify cache=no or cache=yes when using
      the +POSTDESCRIPTOR command.
    - Bridge authorities now write bridge descriptors to disk, meaning
      we can export them to other programs and begin distributing them
      to blocked users.

  o Major features (directory authorities):
    - When a v3 authority is missing votes or signatures, it now tries